--- a/app/templates/ea.html
+++ b/app/templates/ea.html
@@ -7,13 +7,14 @@
     <!--Titre du document-->
     <title>La Peraudière | Service Impression</title>
     <!-- CSS Bootstrap-->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <!--CSS propriétaires-->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style-general.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style-accueil.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style-signature.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style-menu.css') }}">
     <!--Jeux de polices-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -56,23 +57,31 @@
                     </li>
                 </ol>
             </nav>
-        </div> 
-        {% if message %}
-        <div class="alert alert-info alert-dismissible fade show" role="alert">
-            {{ message }}
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">X</button>
         </div>
-        {% endif %}
-        {% if error_message %}
-        <div class="alert alert-danger alert-dismissible fade show" role="alert">
-            {{ error_message }}
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">X</button>
-        </div>
-        {% endif %}
-        {% if success_message %}
-        <div class="alert alert-success alert-dismissible fade show" role="alert">
-            {{ success_message }}
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">X</button>
+        {% if message or error_message or success_message %}
+        <div class="container-fluid">
+            <div class="row align-items-center justify-content-center">
+                <div class="col-md-12">
+                    {% if message %}
+                    <div class="alert alert-info alert-dismissible fade show" role="alert">
+                        {{ message }}
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close" title="Fermer"></button>
+                    </div>
+                    {% endif %}
+                    {% if error_message %}
+                    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                        {{ error_message }}
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close" title="Fermer"></button>
+                    </div>
+                    {% endif %}
+                    {% if success_message %}
+                    <div class="alert alert-success alert-dismissible fade show" role="alert">
+                        {{ success_message }}
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close" title="Fermer"></button>
+                    </div>
+                    {% endif %}
+                </div>
+            </div>
         </div>
         {% endif %}
         <!-- Conteneur de paramétrage de l'espace d'impression -->
