Add TODO list for CI/CD tests including user addition and modification tests feat: - Ajout d'un dossier temporaire pour la création des fichiers à faire signer - Meilleure documentation du code - Ajout de l'id de l'utilisateur dans la session - Création d'un soft-delete pour les utilisateurs dans les cas ou des fichiers signés ou à signer lui sont liés - Gestion de la création de documents à faire signer dans une classe dédiée - Modification du pointage du dossier temporaire pour aller vers un dossier non monté. - Création des classes pour les nouvelles tables liées à la signature électronique - Suppression des tables temporaires dans signatures.py - Création d'un SVG pour la représentation de la base de données. fix: - Correction du déplacement des fichiers (utilisation de shutil.move au lieu de Path.rename) - Correction de mots de passes changés en vides dans les routes de gestion des utilisateurs et de gestion des droits. - Correction des liens entre les tables SQLAlchemy - Corrections mineures dans ea.html - Correction de la liste de priorité des signatures pour être en phase avec le modèle (integer et non string)

--- a/app/templates/signatures/signature_make.html
+++ b/app/templates/signatures/signature_make.html
@@ -84,10 +84,10 @@
                                 <label for="document-priority" class="form-label">Priorité *</label>
                                 <select class="form-select" id="document-priority" name="document_priority" required>
                                     <option value="" disabled selected>Sélectionner une priorité</option>
-                                    <option value="basse">Basse</option>
-                                    <option value="normale">Normale</option>
-                                    <option value="haute">Haute</option>
-                                    <option value="urgente">Urgente</option>
+                                    <option value="-1">Basse</option>
+                                    <option value="0">Normale</option>
+                                    <option value="1">Haute</option>
+                                    <option value="2">Urgente</option>
                                 </select>
                             </div>
                         </div>
