--- a/app/templates/ea.html
+++ b/app/templates/ea.html
@@ -44,7 +44,9 @@
                         </a>
                     </li>
                     <li class="breadcrumb-item bi">
-                        Espace Administratif
+                        <a href="{{ url_for('ea') }}">
+                            Espace Administratif
+                        </a>
                     </li>
                     <li class="breadcrumb-item active">
                         {% if not context %}
@@ -84,14 +86,13 @@
             </div>
         </div>
         {% endif %}
-        <!-- Conteneur de paramétrage de l'espace d'impression -->
+        <!-- Conteneur de l'espace administratif -->
         <div class="container-fluid">
-            {% if message %}
-                <div class="alert alert-{{ message.type }}" role="alert">
-                    {{ message.text }}
-                </div>
-            {% endif %}
-            {% if not context %}
+            {% if context == 'signature_make' %}
+                {% include 'signatures/signature_make.html' %}
+            {% elif context == 'signature_do' %}
+                {% include 'signatures/signature_do.html' %}
+            {% else %}
             <h2>Accueil de l'espace administratif</h2>
             <div class="row">
                 {% for section in sections %}
@@ -131,11 +132,7 @@
                     </form>
                 </div>
             </div>
-            {% elif context == 'signature_make' %}
-                {% include 'signatures/signature_make.html' %}
-            {% elif context == 'signature_do' %}
-                {% include 'signatures/signature_do.html' %}
-            {% endif %}
+        {% endif %}
         </main>
         <footer>
             <p>© 2025 - La Péraudière - Tous droits réservés</p>
@@ -143,7 +140,7 @@
     <!--Scripts PDF.js (pour les signatures)-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
     <!--Scripts propriétaires-->
-    <script src="{{ url_for('static', filename='js/signatures.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/signatures-common.js') }}?v=3"></script>
     <!--Scripts Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
