--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -49,6 +49,7 @@
                 </div>
                 {% endif %}
                 <form method="post" action="{{ url_for('login') }}">
+                    <input type="hidden" name="preview_request" value="{{ preview_request or '' }}">
                     <div class="form-group">
                         <div class="etiquette">
                             <label for="username">Identifiant:</label>
