--- a/app/templates/ea.html
+++ b/app/templates/ea.html
@@ -5,7 +5,7 @@
     <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicone.svg') }}" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Titre du document-->
-    <title>La Peraudière | Service Impression</title>
+    <title>La Peraudière | Espace Administratif</title>
     <!-- CSS Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
