--- a/app/templates/signatures/signed_document_mail.html
+++ b/app/templates/signatures/signed_document_mail.html
@@ -46,6 +46,18 @@
             border-radius: 5px;
             margin: 15px 0;
         }
+        .signatory-item {
+            padding: 5px 0;
+            padding-left: 20px;
+            position: relative;
+        }
+        .signatory-item::before {
+            content: "✓";
+            position: absolute;
+            left: 0;
+            color: #28a745;
+            font-weight: bold;
+        }
         .footer {
             text-align: center;
             font-size: 12px;
@@ -93,11 +105,9 @@
             
             <div class="signatories-list">
                 <h4>Signataires :</h4>
-                <ul>
-                    {% for signatory in signatory_names %}
-                    <li>{{ signatory }}</li>
-                    {% endfor %}
-                </ul>
+                {% for signatory in signatory_names %}
+                <div class="signatory-item">{{ signatory }}</div>
+                {% endfor %}
             </div>
             
             <p>Le document finalisé avec toutes les signatures est joint à cet email en pièce jointe.</p>
