--- a/app/static/css/style-signature.css
+++ b/app/static/css/style-signature.css
@@ -1,3 +1,58 @@
+.tab {
+    background-color: white;
+    display: table-row;
+  }
+
+  .tab button {
+    background-color: var(--secondary-color);
+    color: var(--primary-color);
+    font-family: var(--font-document);
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    transition: 0.5s;
+    margin: 0 10px 0 0;
+    border-radius: 10px 10px 0 0;
+  }
+
+  .tab button:hover {
+    background-color: var(--secondary-color);
+    color: var(--primary-color);
+  }
+
+  .tab button.active {
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
+  }
+
+  .tabcontent {
+    border: solid 3px;
+    border-radius: 0 0 10px 10px;
+  }
+
+  .container {
+    min-width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
+    align-content: normal;
+  }
+
+.icone-ok {
+    color: var(--secondary-color);
+    background-color: var(--primary-color);
+    font-size: 1.2em;
+    border-radius: 5px;
+    padding: 5px;
+}
+.icone-nok {
+    color: var(--primary-color);
+    background-color: var(--secondary-color);
+    font-size: 1.2em;
+    border-radius: 5px;
+    padding: 5px;
+}
+
 /* Conteneur principal pour le viewer PDF */
 .pdf-viewer-container {
     border: 1px solid #ddd;
