--- a/app/templates/gestion_utilisateurs.html
+++ b/app/templates/gestion_utilisateurs.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
     <!--CSS propriétaires-->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style-accueil.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style-general.css') }}">
@@ -29,24 +30,6 @@
     <!-- Titre de la fonctionnalité en en-tête -->
     <header>
         <h1>Gestion des utilisateurs</h1>
-        {% if message %}
-        <div class="alert alert-info alert-dismissible fade show" role="alert">
-            {{ message }}
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">X</button>
-        </div>
-        {% endif %}
-        {% if error_message %}
-        <div class="alert alert-danger alert-dismissible fade show" role="alert">
-            {{ error_message }}
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">X</button>
-        </div>
-        {% endif %}
-        {% if success_message %}
-        <div class="alert alert-success alert-dismissible fade show" role="alert">
-            {{ success_message }}
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">X</button>
-        </div>
-        {% endif %}
     </header>
     <!-- Corps de la page -->
     <main>
@@ -199,7 +182,7 @@
                     <div class="modal-content">
                         <!-- En-tête du modal de modification -->
                         <div class="modal-header">
-                            <h5 class="modal-title" id="modalModif{{ user['identifiant'] }}Label">Modifier un utilisateur</h5>
+                            <h5 class="modal-title" id="modalModif{{ user['id'] }}Label">Modifier un utilisateur</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <!-- Corps du modal de modification -->
@@ -208,27 +191,27 @@
                                 <!-- Modification de prénom -->
                                 <div class="mb-3">
                                     <label for="prenom" class="form-label">Prénom</label>
-                                    <input type="text" class="form-control" id="prenom" name="prenom" value="{{ user['prenom'] }}">
+                                    <input type="text" class="form-control" id="prenom{{ user['id'] }}" name="prenom" value="{{ user['prenom'] }}">
                                 </div>
                                 <!-- Modification du nom -->
                                 <div class="mb-3">
                                     <label for="nom" class="form-label">Nom</label>
-                                    <input type="text" class="form-control" id="nom" name="nom" value="{{ user['nom'] }}">
+                                    <input type="text" class="form-control" id="nom{{ user['id'] }}" name="nom" value="{{ user['nom'] }}">
                                 </div>
                                 <!-- Modification du mail -->
                                 <div class="mb-3">
                                     <label for="mail" class="form-label">Mail</label>
-                                    <input type="email" class="form-control" id="mail" name="mail" value="{{ user['mail'] }}">
+                                    <input type="email" class="form-control" id="mail{{ user['id'] }}" name="mail" value="{{ user['mail'] }}">
                                 </div>
                                 <!-- Modification de l'identifiant -->
                                 <div class="mb3">
                                     <label for="identifiant" class="form-label">Identifiant (pnnnnnnnnnnn)</label>
-                                    <input type="text" class="form-control" id="identifiant" name="identifiant" value="{{ user['identifiant'] }}">
+                                    <input type="text" class="form-control" id="identifiant{{ user['id'] }}" name="identifiant" value="{{ user['identifiant'] }}">
                                 </div>
                                 <!-- Modification du mot de passe-->
                                 <div class="mb-3">
                                     <label for="mdp" class="form-label">Mot de passe</label>
-                                    <input type="password" class="form-control" id="mdp" name="mdp">
+                                    <input type="password" class="form-control" id="mdp{{ user['id'] }}" name="mdp">
                                 </div>
                                 <!-- Modification des habilitations -->
                                 <div class="mb-3 d-none">
@@ -265,10 +248,10 @@
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
-                            <form action="{{ url_for('suppr_utilisateurs') }}" method="post">
+                            <form action="{{ url_for('suppr_utilisateurs', id_user=user['identifiant']) }}" method="post">
                                 <div class="mb-3">
                                     <label for="identifiant" class="form-label">Identifiant</label>
-                                    <input type="text" class="form-control" id="identifiant" name="identifiant" value="{{ user['identifiant'] }}">
+                                    <input type="text" class="form-control" id="identifiant{{ user['identifiant'] }}" name="identifiant" value="{{ user['identifiant'] }}">
                                 </div>
                                 <button type="submit" class="btn btn-primary" onclick="confirm('Êtes-vous sûr de vouloir supprimer cet élève ?')">Supprimer</button>
                             </form>
