--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicone.svg') }}" type="image/x-icon">
     <!-- CSS Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
     <!--CSS propriétaires-->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style-accueil.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style-general.css') }}">
